--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Главная | Проектная деятельность</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="images/logo.png" alt="Логотип">
+                    <span>Проектная деятельность</span>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Главная</a></li>
+                    <li><a href="about.html">О проекте</a></li>
+                    <li><a href="team.html">Участники</a></li>
+                    <li><a href="journal.html">Журнал</a></li>
+                    <li><a href="resources.html">Ресурсы</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Система централизованной отчётности и предикативная модель операционных показателей</h1>
+                <p>Инновационное решение для автоматизации сбора данных и прогнозирования ключевых показателей Московского Политеха</p>
+                <a href="about.html" class="btn btn-primary">Узнать больше</a>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="container">
+                <h2 class="section-title">Ключевые особенности проекта</h2>
+                <div class="features-grid">
+                    <div class="feature-card">
+                        <div class="feature-icon">📊</div>
+                        <h3>Централизованная отчётность</h3>
+                        <p>Единая платформа для сбора и анализа данных со всех факультетов университета.</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">🔮</div>
+                        <h3>Предиктивная аналитика</h3>
+                        <p>Модель для прогнозирования показателей на основе исторических данных.</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">🔄</div>
+                        <h3>Интеграция с системами</h3>
+                        <p>Подключение к 1С:Университет и другим внутренним системам.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="annotation">
+            <div class="container">
+                <h2 class="section-title">Аннотация проекта</h2>
+                <div class="annotation-content">
+                    <p>Проект направлен на создание комплексного решения для автоматизации процессов сбора, обработки и анализа операционных показателей Московского Политехнического университета. Система позволит консолидировать данные из различных источников, автоматизировать формирование отчётности и реализовать механизмы прогнозирования ключевых показателей с использованием различных методов для большей объективности.</p>
+                    <img src="images/system-scheme.png" alt="Схема системы">
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h3>Контакты</h3>
+                    <p>Email: mihail.jonn.net@gmail.com</p>
+                    <p>Телефон: +7 (965) 667-58-86</p>
+                </div>
+                <div class="footer-column">
+                    <h3>Навигация</h3>
+                    <ul>
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="about.html">О проекте</a></li>
+                        <li><a href="team.html">Участники</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Проектная деятельность, Московский Политех</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
