--- a/site/resources.html
+++ b/site/resources.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ресурсы | Проектная деятельность</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="images/logo.png" alt="Логотип">
+                    <span>Проектная деятельность</span>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="about.html">О проекте</a></li>
+                    <li><a href="team.html">Участники</a></li>
+                    <li><a href="journal.html">Журнал</a></li>
+                    <li><a href="resources.html" class="active">Ресурсы</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main>
+        <section class="resources-section">
+            <div class="container">
+                <h1 class="section-title">Полезные ресурсы</h1>
+                
+                <div class="resources-grid">
+                    <div class="resources-category">
+                        <h2>Ссылки</h2>
+                        <ul class="resources-list">
+                            <li>
+                                <a href="https://mospolytech.ru" target="_blank">
+                                    <strong>Официальный сайт Московского Политеха</strong>
+                                    <span>Основной сайт университета-партнёра</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://powerbi.microsoft.com" target="_blank">
+                                    <strong>Microsoft Power BI</strong>
+                                    <span>Инструмент для визуализации данных</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    <div class="resources-category">
+                        <h2>Документация</h2>
+                        <ul class="resources-list">
+                            <li>
+                                <a href="https://www.postgresql.org/docs/" target="_blank">
+                                    <strong>PostgreSQL Documentation</strong>
+                                    <span>Официальная документация СУБД</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h3>Контакты</h3>
+                    <p>Email: mihail.jonn.net@gmail.com</p>
+                    <p>Телефон: +7 (965) 667-58-86</p>
+                </div>
+                <div class="footer-column">
+                    <h3>Навигация</h3>
+                    <ul>
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="about.html">О проекте</a></li>
+                        <li><a href="team.html">Участники</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Проектная деятельность, Московский Политех</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
